# Bonbon-robot

./: .gitignore  pyproject.toml
devops/scripts/: post_deploy_check.py  release_version.py  validate_config.py  verify_release.py
devops/tests/: conftest.py  test_deployment_system.py  test_documentation_contract.py  test_integration_configs.py  test_platform_documentation.py  test_stress_latency_regression.py  test_unit_scripts.py
ros2_ws/src/bonbon_actions/: CMakeLists.txt  package.xml
ros2_ws/src/bonbon_actions/action/: ExecuteMotionSequence.action
ros2_ws/src/bonbon_actuation/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_actuation/launch/: actuation.launch.py
ros2_ws/src/bonbon_affective_ai/: package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_behavior_engine/: package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_bringup/launch/: bringup.launch.py
ros2_ws/src/bonbon_bringup/tests/: test_bringup_launch.py
ros2_ws/src/bonbon_data_stores/: setup.py
ros2_ws/src/bonbon_gesture/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/: __init__.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/backends/: __init__.py  gesture_backend_interface.py  mediapipe_backend.py  mock_backend.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/classifiers/: __init__.py  body_gesture_classifier.py  hand_gesture_classifier.py  head_gesture_classifier.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/config/: __init__.py  gesture_config.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/health/: __init__.py  health_monitor.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/logic/: __init__.py  intent_mapper.py  safety_classifier.py  temporal_smoother.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/nodes/: __init__.py  gesture_node.py
ros2_ws/src/bonbon_gesture/bonbon_gesture/processors/: __init__.py  pose_landmark_processor.py
ros2_ws/src/bonbon_gesture/config/: gesture.yaml
ros2_ws/src/bonbon_gesture/launch/: gesture.launch.py
ros2_ws/src/bonbon_gesture/tests/: __init__.py  test_body_classifier.py  test_hand_classifier.py  test_head_classifier.py  test_safety_classifier.py
ros2_ws/src/bonbon_gesture/tests/integration/: test_gesture_integration.py
ros2_ws/src/bonbon_hal/: setup.py
ros2_ws/src/bonbon_llm/: setup.py
ros2_ws/src/bonbon_msgs/: CMakeLists.txt
ros2_ws/src/bonbon_msgs/msg/: ActuationGesture.msg  ActuationStatus.msg  BehaviorDecision.msg  BehaviorProposal.msg  FaceEmotion.msg  GestureEvent.msg  HumanEmotionState.msg  HumanStateEstimate.msg  ServoState.msg  SocialNavigationHint.msg  SpatialEntity.msg  SpatialRelation.msg  TextEmotion.msg  VoiceEmotion.msg
ros2_ws/src/bonbon_navigation/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_navigation/bonbon_navigation/: __init__.py
ros2_ws/src/bonbon_navigation/bonbon_navigation/behaviors/: __init__.py  docking_controller.py
ros2_ws/src/bonbon_navigation/bonbon_navigation/config/: __init__.py  nav_config.py
ros2_ws/src/bonbon_navigation/bonbon_navigation/core/: __init__.py  battery_router.py  goal_manager.py  localization_monitor.py  map_manager.py  recovery_executor.py  stuck_detector.py
ros2_ws/src/bonbon_navigation/bonbon_navigation/nodes/: __init__.py  navigation_node.py
ros2_ws/src/bonbon_navigation/bonbon_navigation/planners/: __init__.py  human_aware_costmap.py
ros2_ws/src/bonbon_navigation/bonbon_navigation/safety/: __init__.py  safety_stop_bridge.py
ros2_ws/src/bonbon_navigation/config/: nav2_params.yaml  nav_params.yaml  rtabmap_params.yaml
ros2_ws/src/bonbon_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
ros2_ws/src/bonbon_navigation/maps/: cafe_map.yaml
ros2_ws/src/bonbon_navigation/tests/: __init__.py  test_battery_router.py  test_goal_manager.py  test_localization_monitor.py  test_map_manager.py  test_recovery_behaviors.py  test_safety_stop_bridge.py  test_stuck_detector.py
ros2_ws/src/bonbon_navigation/tests/integration/: __init__.py  test_hospital_corridor.py  test_navigation_timeout.py  test_obstacle_blocking.py
ros2_ws/src/bonbon_navigation/tests/simulation/: __init__.py  test_crowded_environment.py
ros2_ws/src/bonbon_navigation/worlds/: cafe.world  crowded_cafe.world  hospital_corridor.world
ros2_ws/src/bonbon_operator_api/: package.xml  pytest.ini  setup.cfg  setup.py
ros2_ws/src/bonbon_perception/: setup.py
ros2_ws/src/bonbon_perception_ai/: setup.py
ros2_ws/src/bonbon_safety/: setup.py
ros2_ws/src/bonbon_simulation/: setup.py
ros2_ws/src/bonbon_spatial/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_speech/: setup.py
ros2_ws/src/bonbon_srvs/: CMakeLists.txt
ros2_ws/src/bonbon_srvs/srv/: AddRestrictedZone.srv  AnalyzeText.srv  EvaluateCommand.srv  GetApproachPose.srv  GetWorldModel.srv  HealthCheck.srv  PerformGesture.srv  RemoveRestrictedZone.srv  SetMode.srv  SetPrivacyMode.srv
ros2_ws/src/bonbon_tts/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_tts/bonbon_tts/: __init__.py
ros2_ws/src/bonbon_tts/bonbon_tts/backends/: __init__.py  base_tts.py  mock_tts.py  piper_tts.py
ros2_ws/src/bonbon_tts/bonbon_tts/config/: __init__.py  tts_config.py
ros2_ws/src/bonbon_tts/bonbon_tts/core/: __init__.py  filler_player.py  metrics_collector.py  safety_gate.py  speech_synthesizer.py  text_processor.py  tts_health.py  utterance_queue.py  voice_profile.py
ros2_ws/src/bonbon_tts/bonbon_tts/nodes/: __init__.py  tts_node.py
ros2_ws/src/bonbon_tts/bonbon_tts/speaker/: __init__.py  speaker_bridge.py
ros2_ws/src/bonbon_tts/config/: tts_params.yaml
ros2_ws/src/bonbon_tts/launch/: tts.launch.py
ros2_ws/src/bonbon_tts/tests/: test_filler_player.py  test_speaker_bridge.py  test_speech_synthesizer.py  test_tts_config.py  test_tts_health.py  test_utterance_queue.py
ros2_ws/src/bonbon_tts/tests/integration/: test_tts_pipeline.py
ros2_ws/src/bonbon_vision/: demo_webcam.py  setup.py
scripts/: fetch_dashboard_models.sh
(+390 files in other folders)
